// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xstate component tree should ignore non-statechart children (callback) 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;

exports[`xstate component tree should ignore non-statechart children (promise) 1`] = `
Array [
  Object {
    "children": Array [],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;

exports[`xstate component tree should rebuild on child machine transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,12 +1,12 @@
  Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
-         "component": "child1",
-         "path": "child1",
+         "component": "child2",
+         "path": "child2",
          "props": false,
        },
      ],
      "component": "one",
      "path": "one",
`;

exports[`xstate component tree should rebuild on nested invoked machine transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -3,12 +3,12 @@
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
-             "component": "grandchild1",
-             "path": "grandchild1",
+             "component": "grandchild2",
+             "path": "grandchild2",
              "props": false,
            },
          ],
          "component": "child",
          "path": "child",
`;

exports[`xstate component tree should rebuild on parent transitions 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ -1,12 +1,12 @@
  Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
-         "component": "oneone",
-         "path": "one.oneone",
+         "component": "onetwo",
+         "path": "one.onetwo",
          "props": false,
        },
        Object {
          "children": Array [],
          "component": "child1",
`;

exports[`xstate component tree should remove data once the invoked child machine is halted 1`] = `
Snapshot Diff:
- First value
+ Second value

  Array [
    Object {
-     "children": Array [
-       Object {
      "children": Array [],
-         "component": "child",
-         "path": "child",
-         "props": false,
-       },
-     ],
-     "component": "one",
-     "path": "one",
+     "component": "two",
+     "path": "two",
      "props": false,
    },
  ]
`;

exports[`xstate component tree should support invoked child machines 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
        "path": "child",
        "props": false,
      },
    ],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;

exports[`xstate component tree should support invoked child machines in a parallel state 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [],
        "component": "child",
        "path": "child",
        "props": false,
      },
    ],
    "component": "one",
    "path": "one",
    "props": false,
  },
  Object {
    "children": Array [],
    "component": "two",
    "path": "two",
    "props": false,
  },
]
`;

exports[`xstate component tree should support nested invoked machines 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": Array [],
            "component": "grandchild",
            "path": "grandchild",
            "props": false,
          },
        ],
        "component": "child",
        "path": "child",
        "props": false,
      },
    ],
    "component": "one",
    "path": "one",
    "props": false,
  },
]
`;
